@@ -14,6 +14,7 @@ Jump Start Changelog
 * Fixed: Javascript conflicts with JetPack on Edit Page/Post screens.
 * Fixed: Hero unit text not displaying above background video.
 * Fixed: WPML-translated pages not allowing to save a unique, translated custom layout.
+* Fixed: Display issues with new post embedding, introduced in WordPress 4.4.
 
 --------------------------------------------------------------
 
